--- a/main.html
+++ b/main.html
@@ -6,7 +6,17 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
+<body style="background-color: yellow; text-align: center;">
+	<div>
+        <h1 id="f1">Flowers photos</h1>
+        <p style="font-style: italic;">Flowers are beautiful and colorful plants that brighten up our surroundings. They come in various shapes, sizes, and colors, making them a symbol of beauty and love in many cultures.</p>
+    </div>
+
+    <div style="margin-top: 20px;">
+        <h1 id="f2">Roses pictures</h1>
+        <p style="font-style: italic;">Roses are one of the most iconic and beloved flowers. They are known for their delicate petals and sweet fragrance. Roses come in a wide range of colors, each with its own unique meaning.</p>
+    </div>
+
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
